isochrones on a map, not... snakes on a plane

--- a/static/index.html
+++ b/static/index.html
@@ -22,10 +22,11 @@
   </style>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&callback=initMap&libraries=&v=weekly"></script>
   <script src="https://unpkg.com/mustache@latest"></script>
+  <script src='https://unpkg.com/@turf/turf/turf.min.js'></script>
 </head>
 <body>
   <div class="container-fluid" style="height: 100%;">
-    <div class="row" style="height: 90%;">
+    <div class="row" style="height: 99%;">
       <div class="col-md-3" id="nav-list">
         <div id="stores"></div>
       </div>
