--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
       width: 100%; height: 100%;
     }
   </style>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&callback=initMap&libraries=&v=weekly"></script>
+  <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&callback=initMap&libraries=&v=weekly"></script>-->
   <script src="https://unpkg.com/mustache@latest"></script>
   <script src='https://unpkg.com/@turf/turf/turf.min.js'></script>
 </head>
@@ -54,5 +54,6 @@
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <script src="js/socket.io.js"></script>
   <script src="js/app.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&v=weekly&callback=loadMap&map_ids=6a9eb25b0d956d9d"></script>
 </body>
 </html>
