flashy flashy alert on entry of inner fence

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,9 @@
     div#map-container {
       width: 100%; height: 100%;
     }
+    .flash {
+      background-color: #e3f2fd;
+    }
   </style>
   <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&callback=initMap&libraries=&v=weekly"></script>-->
   <script src="https://unpkg.com/mustache@latest"></script>
@@ -62,7 +65,7 @@
     <div class="media position-relative w-100">
       <div class="card text-white bg-primary mb-3 w-100">
         <!-- rotate(0) so the stretched-link within it is limited to just this block -->
-        <div class="card-header" style="transform: rotate(0);">
+        <div class="card-header" id="order-{{ order.orderId }}" style="transform: rotate(0);">
           <a href="#!" onClick="onShowOrder('{{ order.orderId }}');" class="text-white stretched-link">{{ order.orderId }}</a>
         </div>
         <div class="card-body">
