--- a/static/index.html
+++ b/static/index.html
@@ -29,13 +29,13 @@
 </head>
 <body>
   <div class="container-fluid" style="height: 100%;">
-    <div class="row" style="height: 99%;">
+    <div class="row" style="height: 100%;">
       <div class="col-md-4 h-100" id="nav-list">
         <div id="nav" class="invisible w-100 d-inline-block text-center">
           <h3 class="text-left"><a href="#!" onClick="onShowRange(600);">Carmelit</a></h3>
           <!--<a href="#!" onClick="onNavRange(120);">2min</a> | <a href="#!" onClick="onNavRange(300);">5min</a> | <a href="#!" onClick="onNavRange(600);">10min</a>-->
         </div>
-        <div id="stores" class="h-99 w-100 d-inline-block overflow-auto p-1"></div>
+        <div id="stores" class="h-100 w-100 d-inline-block overflow-auto p-1"></div>
       </div>
       <div class="col-md-8 h-100" id="map-view">
         <div id="map-container" class="z-depth-1-half map-container h-100"></div>
@@ -81,7 +81,7 @@
     <div id="range-{{ range.id }}">
       <div class="card text-white text-center bg-primary mb-0 mt-3 w-100" style="transform: rotate(0);">
         <div class="card-body">
-          <a href="#!" onClick="onShowRange('{{range.id}}');" class="text-white stretched-link">Within {{ range.time }} min</a>
+          <a href="#!" onClick="onShowRange('{{range.id}}');" class="text-white stretched-link">{{ range.time }} min</a>
         </div>
       </div>
     </div>
