--- a/static/index.html
+++ b/static/index.html
@@ -1,97 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Order Monitor</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/mdb.min.css">
-  <style>
-    html,body {
-       margin: 0;
-       padding: 5px;
-       height: 100%;
-       width: 100%;
-    }
-    div#map-container {
-      width: 100%; height: 100%;
-    }
-    .flash {
-      background-color: #0d47a1;
-    }
-  </style>
-  <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&callback=initMap&libraries=&v=weekly"></script>-->
-  <script src="https://unpkg.com/mustache@latest"></script>
-  <script src='https://unpkg.com/@turf/turf/turf.min.js'></script>
-</head>
-<body>
-  <div class="container-fluid" style="height: 100%;">
-    <div class="row" style="height: 100%;">
-      <div class="col-md-4 h-100" id="nav-list">
-        <div id="nav" class="invisible w-100 d-inline-block text-center">
-          <h3 class="text-left"><a href="#!" onClick="onShowRange(600);">Carmelit</a></h3>
-          <!--<a href="#!" onClick="onNavRange(120);">2min</a> | <a href="#!" onClick="onNavRange(300);">5min</a> | <a href="#!" onClick="onNavRange(600);">10min</a>-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Order Monitor</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/mdb.min.css" />
+    <style>
+      html,
+      body {
+        margin: 15px;
+        padding: 5px;
+        height: 100%;
+        width: 100%;
+      }
+      div#map-container {
+        width: 100%;
+        height: 100%;
+      }
+      .flash {
+        background-color: #0d47a1;
+        color: white;
+      }
+    </style>
+    <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
+  </head>
+  <body>
+    <div class="container-fluid" style="height: 100%;">
+      <div class="row">
+        <h1>
+          <a href="./index.html">So Inclined Restaurants</a>
+        </h1>
+      </div>
+      <p>Order Monitor</p>
+      <hr />
+      <div id="store-page-header" class="row"></div>
+      <div class="row" style="height: 100%;">
+        <div class="col-md-5 h-100" id="nav-list">
+          <div
+            id="stores"
+            class="h-100 w-100 d-inline-block overflow-auto p-1"
+          ></div>
         </div>
-        <div id="stores" class="h-100 w-100 d-inline-block overflow-auto p-1"></div>
-      </div>
-      <div class="col-md-8 h-100" id="map-view">
-        <div id="map-container" class="z-depth-1-half map-container h-100"></div>
-      </div>
-    </div>
-  </div>
-
-  <script id="store-template" type="x-tmpl-mustache">
-    <div class="media position-relative">
-      <div class="card text-white bg-primary mb-3 w-100">
-        <div class="card-header w-100">{{ location.name }}</div>
-        <div class="card-body">
-          <p class="card-text text-white">{{ location.address }}
-          <a href="#!" onClick="onGetOrders('{{ location.name }}');" class="text-white text-decoration-underline attr stretched-link"></a>
+        <div class="col-md-7 h-100" id="map-view">
+          <div
+            id="map-container"
+            class="z-depth-1-half map-container h-100"
+          ></div>
         </div>
       </div>
     </div>
-  </script>
 
-  <script id="order-empty-template" type="x-tmpl-mustache">
-    <div class="w-100">
-      <div class="card w-100">
-        <div class="card-body text-center">No Orders</div>
-      </div>
-    </div>
-  </script>
+    <script id="store-page-header-template" type="x-tmpl-mustache">
+      <h3>{{ store.name }}</h3>
+    </script>
 
-  <script id="order-template" type="x-tmpl-mustache">
-    <div class="w-100">
-      <div class="card w-100">
-        <div class="card-body" id="order-{{ order.orderId }}" onClick="onShowOrder('{{ order.orderId }}');">
-          <div class="row">
-            <div class="col-3">{{ order.orderId }}</div>
-            <div class="col-4">{{ order.date }}</div>
-            <div class="col-5"><button type="button" class="btn btn-sm btn-block" onClick="onCloseOrder('{{ order.orderId }}', '{{ order.storeName }}');">Close</button></div>
+    <script id="store-template" type="x-tmpl-mustache">
+      <div class="media position-relative">
+        <div class="card text-white bg-primary mb-3 w-100">
+          <div class="card-header w-100">{{ store.name }}</div>
+          <div class="card-body">
+            <p class="card-text text-white">{{ store.address }}
+            <a href="#!" onClick="onGetOrders('{{ store.name }}');" class="text-white text-decoration-underline attr stretched-link"></a>
           </div>
         </div>
       </div>
-    </div>
-  </script>
+    </script>
 
-  <script id="order-group-template" type="x-tmpl-mustache">
-    <div id="range-{{ range.id }}">
-      <div class="card text-white text-center bg-primary mb-0 mt-3 w-100" style="transform: rotate(0);">
-        <div class="card-body">
-          <a href="#!" onClick="onShowRange('{{range.id}}');" class="text-white stretched-link">{{ range.time }} min</a>
+    <script id="order-empty-template" type="x-tmpl-mustache">
+      <div class="w-100">
+        <div class="card w-100">
+          <div class="card-body text-center">No Orders</div>
         </div>
       </div>
-    </div>
-  </script>
+    </script>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script> <script type="text/javascript" src="js/popper.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/mdb.min.js"></script>
-  <script src="js/socket.io.js"></script>
-  <script src="app.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&v=weekly&callback=loadMap&map_ids=6a9eb25b0d956d9d"></script>
-</body>
+    <script id="order-template" type="x-tmpl-mustache">
+      <div class="w-100">
+        <div class="card w-100">
+          <div class="card-body" id="order-{{ order.orderId }}" onClick="onShowOrder('{{ order.orderId }}');">
+            <div class="row">
+              <div class="col-4">{{ order.orderId }}</div>
+              <div class="col-4">{{ order.date }}</div>
+              <div class="col-4">
+                <button type="button" class="btn btn-sm btn-block" onClick="onCloseOrder('{{ order.orderId }}', '{{ order.storeName }}');">Close</button>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </script>
+
+    <script id="order-group-template" type="x-tmpl-mustache">
+      <div id="range-{{ range.id }}">
+        <div class="card text-white text-center bg-primary mb-0 mt-3 w-100" style="transform: rotate(0);">
+          <div class="card-body">
+            <a href="#!" onClick="onShowRange('{{range.id}}');" class="text-white stretched-link">{{ range.time }} min</a>
+          </div>
+        </div>
+      </div>
+    </script>
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script src="js/socket.io.js"></script>
+    <script src="app.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&v=weekly&callback=loadMap&map_ids=6a9eb25b0d956d9d"></script>
+  </body>
 </html>
