--- a/static/index.html
+++ b/static/index.html
@@ -21,14 +21,10 @@
     <style>
       html,
       body {
-        margin: 15px;
-        padding: 5px;
+        margin: 10px;
         height: 100%;
         width: 100%;
-      }
-      div#map-container {
-        width: 100%;
-        height: 100%;
+        overflow: hidden;
       }
       .flash {
         background-color: #0d47a1;
@@ -39,7 +35,7 @@
     <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
   </head>
   <body>
-    <div class="container-fluid" style="height: 100%;">
+    <div class="container-fluid" style="width: 100%; height: 95%;">
       <div class="row">
         <div class="col-md-9">
           <h1>
@@ -54,9 +50,9 @@
         </div>
       </div>
       <hr />
-      <div id="store-page-header" class="row"></div>
-      <div class="row" style="height: 100%;">
+      <div class="row" style="width: 100%; height: 90%;">
         <div class="col-md-5 h-100" id="nav-list">
+          <div id="store-page-header"></div>
           <div
             id="stores"
             class="h-100 w-100 d-inline-block overflow-auto p-1"
@@ -131,6 +127,5 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="js/socket.io.js"></script>
     <script src="app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVnheXh1N4vXmza42P_z2hbDyeRfJr9yo&v=weekly&callback=loadMap&map_ids=6a9eb25b0d956d9d"></script>
   </body>
 </html>
